--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="cover content">
                 <div class="long-text slide-in-text">
                     Helluuu HAnnn, 
-                    thì hnayy cũng là ngày Quốc tế phụ nữ 8/3, nên là anh chúc HAnn ngày càng xinh đẹp hơn nè, dễ thương nhìu hơn nữ, mọi chuyện xảy đến với em luôn là những điều tốt đẹp nhất, và những cái ước mơ, tham vọng, hoài bão của HAnn sẽ được thành hiện thực nè.
+                    thì hnayy cũng là ngày Quốc tế phụ nữ 8/3, nên là anh chúc HAnn ngày càng xinh đẹp hơn nè, dễ thương nhìu hơn nữa, mọi chuyện xảy đến với em luôn là những điều tốt đẹp nhất, và những cái ước mơ, tham vọng, hoài bão của HAnn sẽ được thành hiện thực nè.
                     Bên cạnh đó thì HAnn làm gì cũng nhớ chú ý tới sức khoẻ nhìu hơn nheee, ăn ún đầy đủ đừng coá bỏ bữa nựaaa, và cũng suy nghĩ tích cực hơn nè đừng coá nghĩ nhìu nựa nhee :>
                     Với anhh thì HAnn lúc nàoo cũng 10đ hong có nhưng lun, HAnn mãi đỉnhh :>
                     Cuối cùng là chúc HAnn ngày nào cũng vui vẻ để ngày nào đối với em cũng là 8/3.
